--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
 		You need to enable JavaScript to run this app.
 	</noscript>
 	<div id="root"></div>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-87347200-7"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-87347200-7');
+	</script>
+
 </body>
 
 </html>
